[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StatsPanel.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlayerStats.gd" type="Script" id=3]
[ext_resource path="res://assets/Images/Dungeon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Snake.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Beholder.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Battle.gd" type="Script" id=7]
[ext_resource path="res://Assets/Random Battle.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Bat.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Devil.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=1]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 7 )
enemies = [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 554.5, 209.75 )
scale = Vector2( 3.45556, 2.62813 )
texture = ExtResource( 4 )

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 554, 193 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_left = 513.0
margin_top = 153.0
margin_right = 603.0
margin_bottom = 203.0
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = -12.0
margin_top = 15.0
margin_right = 102.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 13 )
text = "LEAVE COMBAT!"

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 429.0
margin_top = 282.0
margin_right = 683.0
margin_bottom = 315.0
script = ExtResource( 2 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 31.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 16.0
margin_right = 82.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 86.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 172.0
margin_top = 16.0
margin_right = 254.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MP
10"
align = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = 489.0
margin_top = 395.0
margin_right = 614.0
margin_bottom = 419.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 89.0
margin_bottom = 21.0
custom_constants/line_separation = 4
custom_styles/normal = SubResource( 3 )
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 452.0
margin_top = 348.0
margin_right = 668.0
margin_bottom = 397.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2

[node name="FightButton" type="Button" parent="UI/BattleActionButtons"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "FIGHT"

[node name="DefendButton" type="Button" parent="UI/BattleActionButtons"]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "DEFEND"

[node name="HealButton" type="Button" parent="UI/BattleActionButtons"]
margin_top = 23.0
margin_right = 100.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 20 )
text = "HEAL"

[node name="EscapeButton" type="Button" parent="UI/BattleActionButtons"]
margin_left = 108.0
margin_top = 23.0
margin_right = 208.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 20 )
text = "ESCAPE"

[node name="Fade" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/DefendButton" to="." method="_on_DefendButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/HealButton" to="." method="_on_HealButton_pressed"]
[connection signal="pressed" from="UI/BattleActionButtons/EscapeButton" to="." method="_on_EscapeButton_pressed"]
